Avoid jumping omnibox text in touch layouts caused by varying location bar icon sizes.

In the touch layouts, LOCATION_BAR_ICON_SIZE is 20, but kFaviconSize is 16, leading to different location bar icon image sizes depending on what icon is displayed and causing the omnibox text to jump when the icon size changes. For example, when typing a url, the 20px globe icon is displayed; wheras when typing a search url, the default search provider's favicon is displayed if available, which for Google is the 16px G icon. To avoid this, we set the location bar icon's size as LOCATION_BAR_ICON_SIZE, which is large enough to contain all icons. This is not an issue in other layouts, where both constants are 16.

Bug: 860295
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ie9bc7a1b0b6b5a1f3dc6f4d2239d8fc2305c5063
Reviewed-on: https://chromium-review.googlesource.com/1135700
Commit-Queue: manuk hovanesian <manukh@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575675}
Former-commit-id: 56aa59358de9dafb974c28f7b26f96878a16fa6b